fix: Skip category slots that have the default value