@@ -2,6 +2,8 @@ package com.acepero13.research.bnfreplacer.core;
 
 import com.acepero13.research.bnfreplacer.core.reports.model.Difference;
 import com.acepero13.research.bnfreplacer.model.Expression;
+import com.acepero13.research.bnfreplacer.plugins.Preprocessing;
+import com.acepero13.research.bnfreplacer.plugins.SkipDummySlots;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -13,6 +15,7 @@ import java.util.stream.IntStream;
 final class Bnf implements Iterable<Expression> {
     private final List<Expression> expressions;
     private List<Expression> mutableExpressions;
+    private static final List<Preprocessing> preprocessing = List.of(new SkipDummySlots()); // TODO: Check if this is the right place for this
 
 
     private Bnf(List<Expression> expressions) {
@@ -25,7 +28,10 @@ final class Bnf implements Iterable<Expression> {
     }
 
     public static Bnf ofStrings(List<String> strings) {
-        List<Expression> expressions = strings.stream().map(Expression::of).collect(Collectors.toList());
+        List<Expression> expressions = strings.stream()
+                                              .filter(s -> preprocessing.stream().allMatch(p -> p.isAllowed(s)))
+                                              .map(Expression::of)
+                                              .toList();
         return new Bnf(expressions);
     }
 
@@ -59,9 +65,9 @@ final class Bnf implements Iterable<Expression> {
 
     private int indexOf(Expression sourceExpression) {
         return IntStream.range(0, mutableExpressions.size())
-                .filter(i -> mutableExpressions.get(i).representsSameExpressionAs(sourceExpression))
-                .findFirst()
-                .orElse(-1);
+                        .filter(i -> mutableExpressions.get(i).representsSameExpressionAs(sourceExpression))
+                        .findFirst()
+                        .orElse(-1);
     }
 
     public void add(Expression sourceExpression) {
